add_subdirectory(thread)
add_subdirectory(utils)
add_subdirectory(log)
add_subdirectory(request)
add_subdirectory(handler)
add_subdirectory(room)

aux_source_directory(. srcs)
add_library(src ${srcs})

target_link_libraries(src thread)
target_link_libraries(src utils)
target_link_libraries(src log)
target_link_libraries(src request)
target_link_libraries(src handler)
target_link_libraries(src room)